Add auth for the tests
