# app.js
@@ -3,6 +3,7 @@ const userController = require('./controller/userController');
 const transferController = require('./controller/transferController');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const authenticateToken = require('./auth');
 
 const app = express();
 app.use(express.json());
@@ -13,8 +14,8 @@ app.post('/login', userController.login);
 app.get('/users', userController.getUsers);
 
 // Transfer routes
-app.post('/transfer', transferController.createTransfer);
-app.get('/transfers', transferController.getTransfers);
+app.post('/transfer', authenticateToken, transferController.createTransfer);
+app.get('/transfers', authenticateToken, transferController.getTransfers);
 
 // Swagger docs
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
